@@ -2359,3 +2359,6 @@ Version 17
 	Added functions to Double3D.  Thanks to Benjamin Axelrod 
 		<baxelrod@irobot.com>
 	Tweaks to Double3D and Double2D's normalize() and resize() functions.
+        Updated MersenneTwister and MersenneTwisterFast to allow full-open, half-open 
+		(both directions) and fully-closed intervals for nextDouble and nextFloat
+
